# nba-scores

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  python-publish.yml
nba/: __main__.py  cli.py  fetch_data.py  scores.py  standings.py
