[project]
name = "nba-cli"
version = "0.1.0"
authors = [
  { name="Christian Cleberg", email="hello@cmc.pub" },
]
description = "A CLI interface to get current NBA scores and standings."
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "nba_api",
    "tabulate",
    "argparse",
    "json"
]

[project.urls]
Homepage = "https://github.com/ccleberg/nba-cli"
Issues = "https://github.com/ccleberg/nba-cli/issues"

[project.scripts]
nba = "nba.cli:nba"

[tool.setuptools.packages.find]
where = ["."]
include = ["nba"]
